# nyambot-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/nyambot_mcp/: __init__.py  server.py
tests/: test_server.py
