[project]
name = "nyambot-mcp"
version = "0.1.1"
description = "L'administration française pour vos agents IA — serveur MCP (communes, géocodage, risques Géorisques, DPE ADEME)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gabriel Mbenda", email = "contact@nyambot.ai" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "france",
    "administration",
    "open-data",
    "data-gouv",
    "immobilier",
    "dpe",
    "georisques",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
nyambot-mcp = "nyambot_mcp.server:main"

[project.urls]
Homepage = "https://nyambot.ai"
Repository = "https://github.com/GabMJ23/nyambot-mcp"
Issues = "https://github.com/GabMJ23/nyambot-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyambot_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
